--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ nav {
   background-color: var(--background-color) !important;
   height: 7vh;
   max-height: 7vh;
+  font-family:
+    Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif !important;
 }
 
 footer {
