--- a/css/projects.css
+++ b/css/projects.css
@@ -1,4 +1,11 @@
-/* Styles specific to the projects page */
-h2 {
-  color: purple;
+:root {
+  --background-color: #222222;
+}
+
+.modal-content {
+  background-color: var(--background-color);
+}
+
+.modal-content span {
+  color: #ffffff;
 }
